# Messpusher

./: .gitignore  pyproject.toml  readme.md
messpusher/: __init__.py  messpusher.py
tests/: config_template.py  test_messpusher.py
