[project]
name = "messpusher"
version = "0.1.0"
description = "A simple message pushing tool"
readme = "README.md"
authors = [
  { name = "Dodge Pock", email = "dodgepock@gmail.com" }
]
license = { text = "MIT" }
keywords = ["messaging", "notification", "push"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "requests"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
